fix: motion graphics grid 2 cols on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -611,7 +611,7 @@ header {
 		}
 
 		&-grid--motion {
-			grid-template-columns: 1fr;
+			grid-template-columns: repeat(2, minmax(0, 1fr));
 		}
 	}
 
